api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: "LoadBalancer"
  selector:
    app: api-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
